--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "devDependencies": {
     "cypress": "^14.0.0",
     "cypress-mochawesome-reporter": "^3.8.2",
-    "cypress-slow-down": "^1.3.1"
+    "cypress-slow-down": "^1.3.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0"
   }
 }
